# Cesi

POO/Prosit 1/L1-Segments2D-C/: CMakeLists.txt
POO/Prosit 1/L1-Segments2D-C/include/: Point2.h  Segment2.h  Vector2.h
POO/Prosit 1/L1-Segments2D-C/src/: Point2.c  Segment2.c  Vector2.c  main.c
POO/Prosit 1/Main/: CMakeLists.txt
POO/Prosit 1/Main/include/: point.hpp  segment.hpp  vector.hpp
POO/Prosit 1/Main/src/: main.cpp  point.cpp  segment.cpp  vector.cpp
POO/Prosit 2/: Corbeille2Etudiant.pdf:Zone.Identifier
POO/Prosit 2/Corbeille/Ex 1/: CMakeLists.txt
POO/Prosit 2/Corbeille/Ex 1/include/: file.hpp
POO/Prosit 2/Corbeille/Ex 1/src/: file.cpp  main.cpp
POO/Prosit 2/Corbeille/tuto-fstream/src/: main.cpp
POO/Prosit 2/Demo-namespace/: CMakeLists.txt
POO/Prosit 2/Demo-namespace/include/: COMP_Calcul.hpp  SVC_Facture.hpp
POO/Prosit 2/Demo-namespace/src/: COMP_Calcul.cpp  COMP_Imprimante.cpp
POO/Prosit 2/Spaghettis/: CMakeLists.txt
POO/Prosit 2/Spaghettis/include/: COMP_Imprimante.hpp
POO/Prosit 2/Spaghettis/src/: SVC_Facture.cpp  main.cpp
POO/Prosit 2/Workshop/Ex 3/: CMakeLists.txt
POO/Prosit 2/Workshop/Ex 3/include/: creature.hpp  heros.hpp
POO/Prosit 2/Workshop/Ex 3/src/: creature.cpp  heros.cpp  main.cpp
POO/Prosit 2/Workshop/random/: CMakeLists.txt
POO/Prosit 2/Workshop/random/src/: main.cpp
POO/Prosit 2/xOr/: CMakeLists.txt
POO/Prosit 2/xOr/include/: crypt.hpp  file.hpp
POO/Prosit 2/xOr/src/: crypt.cpp  file.cpp  main.cpp
POO/Prosit 3/heritage/include/: guerrier.hpp  personnage.hpp
POO/Prosit 3/heritage/src/: personnage.cpp
POO/Prosit 3/main/: CMakeLists.txt
POO/Prosit 3/main/include/: cerlce.hpp  polygone.hpp  rectangle.hpp  triangle.hpp
POO/Prosit 3/main/src/: cercle.cpp  main.cpp  polygone.cpp  rectangle.cpp  triangle.cpp
POO/Prosit 3/workshop/Ex 2/include/: house.hpp  piece.hpp
POO/Prosit 3/workshop/Ex 2/src/: main.cpp  piece.cpp
POO/Prosit 3/workshop/Ex 3/: CMakeLists.txt
POO/Prosit 3/workshop/Ex 3/include/: carre.hpp  objet.hpp
POO/Prosit 3/workshop/Ex 3/src/: objet.cpp  rectangle.cpp
POO/Prosit 3/workshop/Ex 4/: CMakeLists.txt
POO/Prosit 3/workshop/Ex 4/include/: objet.hpp  rectangle.hpp
POO/Prosit 3/workshop/Ex 4/src/: carre.cpp  main.cpp
